--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brusca Store</title>
+  <title>Bruscar </title>
   <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,21 +22,21 @@
         <span class="cabeçalho__menu-hamburguer container__imagem"></span>
       </label>
       <ul class="lista-menu">
-        <li class="lista-menu__titulo">Categorias</li>
+        <li class="lista-menu__titulo">Marcas</li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Programação</a>
+          <a href="#" class="lista-menu__link">Wolkswagem</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Front-end</a>
+          <a href="#" class="lista-menu__link">Chevrolet </a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Infraestrutura</a>
+          <a href="#" class="lista-menu__link">Hyundai</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Business</a>
+          <a href="#" class="lista-menu__link">Ford</a>
         </li>
         <li class="lista-menu__item">
-          <a href="#" class="lista-menu__link">Design & UX</a>
+          <a href="#" class="lista-menu__link">Toyota</a>
         </li>
       </ul>
       <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
@@ -50,23 +50,23 @@
 
         <ul class="lista-menu">
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Programação</a>
+            <a href="#" class="lista-menu__link">Honda</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Front-end</a>
+            <a href="#" class="lista-menu__link">Volvo</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Infraestrutura</a>
+            <a href="#" class="lista-menu__link">Fiat</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Business</a>
+            <a href="#" class="lista-menu__link">KIA</a>
           </li>
           <li class="lista-menu__item">
-            <a href="#" class="lista-menu__link">Design & UX</a>
+            <a href="#" class="lista-menu__link">Caoa Chery</a>
           </li>
         </ul>
-        <li class="opções__item"><a href="#" class="opções__link">Favoritos</a></li>
-        <li class="opções__item"><a href="#" class="opções__link">Minha estante</a></li>
+        <li class="opções__item"><a href="#" class="opções__link"></a></li>
+        <li class="opções__item"><a href="#" class="opções__link"></a></li>
       </ul>
 
     </div>
@@ -74,12 +74,13 @@
       <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"
           class="container__imagem container__imagem-transparente"></a>
       <a href="#" class="container__link">
-        <img src="img/Compras.svg" alt="Carrinhos de compras" class="container__imagem">
-        <p class="container__texto">Minha sacola</p>
-      </a>
+        <img src="img/chevrolet.svg" alt="Carrinhos de compras" class="container__imagem">
+      
+        <p class="container__texto"></p>
+      </a>D
       <a href="#" class="container__link">
-        <img src="img/Usuario.svg" alt="Meu perfil" class="container__imagem">
-        <p class="container__texto">Meu perfil</p>
+        <img src="img/SW4.svg" alt="Meu perfil" class="container__imagem">
+        <p class="container__texto"></p>
       </a>
     </div>
   </header>
